--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,10 +1,6 @@
 name: Java CI with Gradle
 
-on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+on: [push, pull_request]
 
 jobs:
   build:
@@ -18,6 +14,7 @@ jobs:
         with:
           java-version: '11'
           distribution: 'adopt'
+
 
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
