--- a/build.gradle
+++ b/build.gradle
@@ -8,8 +8,6 @@ version '1.0-SNAPSHOT'
 java {
     sourceCompatibility = 11
 }
-compileJava.options.encoding = "UTF-8"
-compileTestJava.options.encoding = "UTF-8"
 
 repositories {
     mavenCentral()
@@ -23,4 +21,9 @@ dependencies {
 
 test {
     useJUnitPlatform()
+    systemProperty "file.encoding", "UTF-8"
+}
+
+tasks.withType(JavaCompile).configureEach {
+    options.encoding = 'UTF-8'
 }
